updated acorn package

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "acorn": "^7.1.1",
     "eslint-utils": "^1.4.3",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
