--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "kind-of": "^6.0.3",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
+    "npm-check-updates": "^4.1.2",
     "querystringify": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
